--- a/Frontend Assignment/module-1.html
+++ b/Frontend Assignment/module-1.html
@@ -570,7 +570,7 @@
         padding: 20px;
       }
       table,th,td{
-             border 2px solid black;
+             border: 2px solid black;
              
 
       }
